--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "citizen-agent-deduplication ",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"  // <-- THIS LINE IS CRUCIAL
-  },
+ "scripts": {
+  "start": "node index.js",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "dependencies": {
     "axios": "^1.0.0",
     "express": "^4.0.0"
